--- a/style.css
+++ b/style.css
@@ -1952,6 +1952,44 @@ p:last-child{
 
 
 
+/* ============ form-section ============ */
+.form-section {
+  padding: 94px 0 90px;
+}
+.form-section__inner {
+  padding: 0 10%;
+}
+
+.from-page-close {
+  font-size: 32px;
+}
+
+.form-x {
+
+}
+.form-x__title {
+  margin: 0 0 60px;
+  text-align: center;
+}
+.form-x__main {
+
+}
+.single-input-x {
+  margin: 0 0 33px;
+}
+.input-x {
+  font-size: 20px;
+  padding: 23px 0;
+  line-height: 1.3;
+  font-weight: 400;
+  color: rgba(35, 31, 32, 0.7);
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid ;
+}
+/* ============ form-section-end ============ */
+
+
 
 
 
